--- a/style.css
+++ b/style.css
@@ -13,6 +13,23 @@ h1 {
 	font-size: 3rem;
 }
 
+#githubicon {
+	position: absolute;
+	top: 40px;
+	right: 10vw;
+	width: 60px;
+	height: 60px;
+	transition: 1.5s;
+	z-index: 0;
+	background-color: transparent;
+	border-radius: 30px;
+}
+
+#githubicon:hover {
+	transform: translateY(-5px);
+	background-color: azure;
+}
+
 a {
 	text-decoration: none;
 	color: black;
