--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ a {
 	border-radius: 7px;
 	width: 30vw;
 	text-align: center;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	background-color: azure;
 }
 
 @media screen and (max-width: 1000px) {
