--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
 html {
 	background-color: cornsilk;
 	font-family: "Orbitron", sans-serif;
+	transition: 1.5s;
+}
+
+.darkBackground {
+	background-color: black;
+	color: azure;
+}
+
+.lightBackground {
+	filter: invert(1);
 }
 
 header {
@@ -22,7 +32,7 @@ h1 {
 	transition: 1.5s;
 	z-index: 0;
 	background-color: transparent;
-	border-radius: 30px;
+	border-radius: 40px;
 }
 
 #githubicon:hover {
@@ -86,4 +96,14 @@ footer {
 
 #updateText {
 	font-size: 0.8rem;
+}
+
+#darkMode {
+	margin: 0 auto;
+	width: fit-content;
+	;
+}
+
+#darkMode:hover {
+	cursor: pointer;
 }
