--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ h1 {
 	font-size: 3rem;
 }
 
+#winloss {
+	position: absolute;
+	top: 200px;
+	left: 5vw;
+}
+
 #githubicon {
 	position: absolute;
 	top: 40px;
