--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ h1 {
 }
 
 #winloss {
+	padding-left: 10px;
+	padding-right: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	background-color: azure;
+	border: 1px solid black;
+	border-radius: 7px;
 	position: absolute;
 	top: 200px;
 	left: 5vw;
@@ -72,7 +78,9 @@ a {
 	transition: 500ms;
 }
 
-@media screen and (max-width: 1000px) {
+
+
+@media screen and (max-width: 1220px) {
 	.linkBox {
 		width: 50vw !important;
 	}
@@ -81,6 +89,15 @@ a {
 		position: relative;
 		top: auto;
 		right: auto;
+	}
+
+	#winloss {
+		position: relative;
+		top: auto;
+		left: auto;
+		width: 50vw !important;
+		text-align: center;
+		padding: 0;
 	}
 
 	h1 {
